gen/com/intellij/plugins/thrift/lang/parser/ThriftParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.plugins.thrift.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.openapi.diagnostic.Logger;
import static com.intellij.plugins.thrift.lang.lexer.ThriftTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ThriftParser implements PsiParser {

  public static final Logger LOG_ = Logger.getInstance("com.intellij.plugins.thrift.lang.parser.ThriftParser");

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    int level_ = 0;
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    if (root_ == BASE_TYPE) {
      result_ = BaseType(builder_, level_ + 1);
    }
    else if (root_ == CONST) {
      result_ = Const(builder_, level_ + 1);
    }
    else if (root_ == CONST_LIST) {
      result_ = ConstList(builder_, level_ + 1);
    }
    else if (root_ == CONST_MAP) {
      result_ = ConstMap(builder_, level_ + 1);
    }
    else if (root_ == CONST_VALUE) {
      result_ = ConstValue(builder_, level_ + 1);
    }
    else if (root_ == CPP_TYPE) {
      result_ = CppType(builder_, level_ + 1);
    }
    else if (root_ == CUSTOM_TYPE) {
      result_ = CustomType(builder_, level_ + 1);
    }
    else if (root_ == DEFINITION_NAME) {
      result_ = DefinitionName(builder_, level_ + 1);
    }
    else if (root_ == DOUBLE_CONSTANT) {
      result_ = DoubleConstant(builder_, level_ + 1);
    }
    else if (root_ == ENUM) {
      result_ = Enum(builder_, level_ + 1);
    }
    else if (root_ == EXCEPTION) {
      result_ = Exception(builder_, level_ + 1);
    }
    else if (root_ == FIELD) {
      result_ = Field(builder_, level_ + 1);
    }
    else if (root_ == FIELD_ID) {
      result_ = FieldID(builder_, level_ + 1);
    }
    else if (root_ == FIELD_REQ) {
      result_ = FieldReq(builder_, level_ + 1);
    }
    else if (root_ == FIELD_TYPE) {
      result_ = FieldType(builder_, level_ + 1);
    }
    else if (root_ == FUNCTION) {
      result_ = Function(builder_, level_ + 1);
    }
    else if (root_ == FUNCTION_TYPE) {
      result_ = FunctionType(builder_, level_ + 1);
    }
    else if (root_ == INCLUDE) {
      result_ = Include(builder_, level_ + 1);
    }
    else if (root_ == INT_CONSTANT) {
      result_ = IntConstant(builder_, level_ + 1);
    }
    else if (root_ == LIST_SEPARATOR) {
      result_ = ListSeparator(builder_, level_ + 1);
    }
    else if (root_ == LIST_TYPE) {
      result_ = ListType(builder_, level_ + 1);
    }
    else if (root_ == MAP_TYPE) {
      result_ = MapType(builder_, level_ + 1);
    }
    else if (root_ == NAMESPACE) {
      result_ = Namespace(builder_, level_ + 1);
    }
    else if (root_ == NAMESPACE_SCOPE) {
      result_ = NamespaceScope(builder_, level_ + 1);
    }
    else if (root_ == SENUM) {
      result_ = Senum(builder_, level_ + 1);
    }
    else if (root_ == SERVICE) {
      result_ = Service(builder_, level_ + 1);
    }
    else if (root_ == SET_TYPE) {
      result_ = SetType(builder_, level_ + 1);
    }
    else if (root_ == STRUCT) {
      result_ = Struct(builder_, level_ + 1);
    }
    else if (root_ == THROWS) {
      result_ = Throws(builder_, level_ + 1);
    }
    else if (root_ == TYPEDEF) {
      result_ = Typedef(builder_, level_ + 1);
    }
    else if (root_ == UNION) {
      result_ = Union(builder_, level_ + 1);
    }
    else if (root_ == XSD_ATTRS) {
      result_ = XsdAttrs(builder_, level_ + 1);
    }
    else if (root_ == XSD_FIELD_OPTIONS) {
      result_ = XsdFieldOptions(builder_, level_ + 1);
    }
    else if (root_ == ENUM_FIELD) {
      result_ = enumField(builder_, level_ + 1);
    }
    else if (root_ == SEMUN_FIELD) {
      result_ = semunField(builder_, level_ + 1);
    }
    else {
      Marker marker_ = enter_section_(builder_, level_, _NONE_, null);
      result_ = parse_root_(root_, builder_, level_);
      exit_section_(builder_, level_, marker_, root_, result_, true, TOKEN_ADVANCER);
    }
    return builder_.getTreeBuilt();
  }

  protected boolean parse_root_(final IElementType root_, final PsiBuilder builder_, final int level_) {
    return Document(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // 'bool' | 'byte' | 'i16' | 'i32' | 'i64' | 'double' | 'string' | 'binary' | 'slist'
  public static boolean BaseType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "BaseType")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<base type>");
    result_ = consumeToken(builder_, "bool");
    if (!result_) result_ = consumeToken(builder_, "byte");
    if (!result_) result_ = consumeToken(builder_, "i16");
    if (!result_) result_ = consumeToken(builder_, "i32");
    if (!result_) result_ = consumeToken(builder_, "i64");
    if (!result_) result_ = consumeToken(builder_, "double");
    if (!result_) result_ = consumeToken(builder_, "string");
    if (!result_) result_ = consumeToken(builder_, "binary");
    if (!result_) result_ = consumeToken(builder_, "slist");
    exit_section_(builder_, level_, marker_, BASE_TYPE, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // 'const' FieldType DefinitionName '=' ConstValue ListSeparator?
  public static boolean Const(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Const")) return false;
    boolean result_ = false;
    boolean pinned_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<const>");
    result_ = consumeToken(builder_, "const");
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, FieldType(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, DefinitionName(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, EQUALS)) && result_;
    result_ = pinned_ && report_error_(builder_, ConstValue(builder_, level_ + 1)) && result_;
    result_ = pinned_ && Const_5(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, CONST, result_, pinned_, null);
    return result_ || pinned_;
  }

  // ListSeparator?
  private static boolean Const_5(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Const_5")) return false;
    ListSeparator(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' (ConstValue ListSeparator?)* ']'
  public static boolean ConstList(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstList")) return false;
    if (!nextTokenIs(builder_, LEFTBRACKET)) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFTBRACKET);
    result_ = result_ && ConstList_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHTBRACKET);
    exit_section_(builder_, marker_, CONST_LIST, result_);
    return result_;
  }

  // (ConstValue ListSeparator?)*
  private static boolean ConstList_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstList_1")) return false;
    int offset_ = builder_.getCurrentOffset();
    while (true) {
      if (!ConstList_1_0(builder_, level_ + 1)) break;
      int next_offset_ = builder_.getCurrentOffset();
      if (offset_ == next_offset_) {
        empty_element_parsed_guard_(builder_, offset_, "ConstList_1");
        break;
      }
      offset_ = next_offset_;
    }
    return true;
  }

  // ConstValue ListSeparator?
  private static boolean ConstList_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstList_1_0")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = ConstValue(builder_, level_ + 1);
    result_ = result_ && ConstList_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ListSeparator?
  private static boolean ConstList_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstList_1_0_1")) return false;
    ListSeparator(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // '{' (ConstValue ':' ConstValue ListSeparator?)* '}'
  public static boolean ConstMap(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstMap")) return false;
    if (!nextTokenIs(builder_, LEFTCURLYBRACE)) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFTCURLYBRACE);
    result_ = result_ && ConstMap_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHTCURLYBRACE);
    exit_section_(builder_, marker_, CONST_MAP, result_);
    return result_;
  }

  // (ConstValue ':' ConstValue ListSeparator?)*
  private static boolean ConstMap_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstMap_1")) return false;
    int offset_ = builder_.getCurrentOffset();
    while (true) {
      if (!ConstMap_1_0(builder_, level_ + 1)) break;
      int next_offset_ = builder_.getCurrentOffset();
      if (offset_ == next_offset_) {
        empty_element_parsed_guard_(builder_, offset_, "ConstMap_1");
        break;
      }
      offset_ = next_offset_;
    }
    return true;
  }

  // ConstValue ':' ConstValue ListSeparator?
  private static boolean ConstMap_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstMap_1_0")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = ConstValue(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COLON);
    result_ = result_ && ConstValue(builder_, level_ + 1);
    result_ = result_ && ConstMap_1_0_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ListSeparator?
  private static boolean ConstMap_1_0_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstMap_1_0_3")) return false;
    ListSeparator(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // IntConstant | DoubleConstant | Literal | Identifier | ConstList | ConstMap
  public static boolean ConstValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstValue")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<const value>");
    result_ = IntConstant(builder_, level_ + 1);
    if (!result_) result_ = DoubleConstant(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, LITERAL);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = ConstList(builder_, level_ + 1);
    if (!result_) result_ = ConstMap(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, CONST_VALUE, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // MapType | SetType | ListType
  static boolean ContainerType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ContainerType")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = MapType(builder_, level_ + 1);
    if (!result_) result_ = SetType(builder_, level_ + 1);
    if (!result_) result_ = ListType(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // 'cpp_type' Literal
  public static boolean CppType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CppType")) return false;
    boolean result_ = false;
    boolean pinned_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<cpp type>");
    result_ = consumeToken(builder_, "cpp_type");
    pinned_ = result_; // pin = 1
    result_ = result_ && consumeToken(builder_, LITERAL);
    exit_section_(builder_, level_, marker_, CPP_TYPE, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean CustomType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CustomType")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, marker_, CUSTOM_TYPE, result_);
    return result_;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean DefinitionName(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DefinitionName")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, marker_, DEFINITION_NAME, result_);
    return result_;
  }

  /* ********************************************************** */
  // BaseType | ContainerType
  static boolean DefinitionType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DefinitionType")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = BaseType(builder_, level_ + 1);
    if (!result_) result_ = ContainerType(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // topLevelElement*
  static boolean Document(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Document")) return false;
    int offset_ = builder_.getCurrentOffset();
    while (true) {
      if (!topLevelElement(builder_, level_ + 1)) break;
      int next_offset_ = builder_.getCurrentOffset();
      if (offset_ == next_offset_) {
        empty_element_parsed_guard_(builder_, offset_, "Document");
        break;
      }
      offset_ = next_offset_;
    }
    return true;
  }

  /* ********************************************************** */
  // ('+' | '-')? Number ('.' Number)? ( ('E' | 'e') IntConstant )?
  public static boolean DoubleConstant(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<double constant>");
    result_ = DoubleConstant_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, NUMBER);
    result_ = result_ && DoubleConstant_2(builder_, level_ + 1);
    result_ = result_ && DoubleConstant_3(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, DOUBLE_CONSTANT, result_, false, null);
    return result_;
  }

  // ('+' | '-')?
  private static boolean DoubleConstant_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_0")) return false;
    DoubleConstant_0_0(builder_, level_ + 1);
    return true;
  }

  // '+' | '-'
  private static boolean DoubleConstant_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_0_0")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, PLUS);
    if (!result_) result_ = consumeToken(builder_, MINUS);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ('.' Number)?
  private static boolean DoubleConstant_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_2")) return false;
    DoubleConstant_2_0(builder_, level_ + 1);
    return true;
  }

  // '.' Number
  private static boolean DoubleConstant_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_2_0")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, ".");
    result_ = result_ && consumeToken(builder_, NUMBER);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ( ('E' | 'e') IntConstant )?
  private static boolean DoubleConstant_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_3")) return false;
    DoubleConstant_3_0(builder_, level_ + 1);
    return true;
  }

  // ('E' | 'e') IntConstant
  private static boolean DoubleConstant_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_3_0")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = DoubleConstant_3_0_0(builder_, level_ + 1);
    result_ = result_ && IntConstant(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // 'E' | 'e'
  private static boolean DoubleConstant_3_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_3_0_0")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "E");
    if (!result_) result_ = consumeToken(builder_, "e");
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // 'enum' DefinitionName '{' enumFields '}'
  public static boolean Enum(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Enum")) return false;
    boolean result_ = false;
    boolean pinned_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<enum>");
    result_ = consumeToken(builder_, "enum");
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, DefinitionName(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, LEFTCURLYBRACE)) && result_;
    result_ = pinned_ && report_error_(builder_, enumFields(builder_, level_ + 1)) && result_;
    result_ = pinned_ && consumeToken(builder_, RIGHTCURLYBRACE) && result_;
    exit_section_(builder_, level_, marker_, ENUM, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // 'exception' DefinitionName '{' fieldsWithCurlyRecovery '}'
  public static boolean Exception(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Exception")) return false;
    boolean result_ = false;
    boolean pinned_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<exception>");
    result_ = consumeToken(builder_, "exception");
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, DefinitionName(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, LEFTCURLYBRACE)) && result_;
    result_ = pinned_ && report_error_(builder_, fieldsWithCurlyRecovery(builder_, level_ + 1)) && result_;
    result_ = pinned_ && consumeToken(builder_, RIGHTCURLYBRACE) && result_;
    exit_section_(builder_, level_, marker_, EXCEPTION, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // FieldID? FieldReq? FieldType Identifier ('=' ConstValue)? XsdFieldOptions ListSeparator?
  public static boolean Field(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field")) return false;
    boolean result_ = false;
    boolean pinned_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<field>");
    result_ = Field_0(builder_, level_ + 1);
    result_ = result_ && Field_1(builder_, level_ + 1);
    result_ = result_ && FieldType(builder_, level_ + 1);
    pinned_ = result_; // pin = 3
    result_ = result_ && report_error_(builder_, consumeToken(builder_, IDENTIFIER));
    result_ = pinned_ && report_error_(builder_, Field_4(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, XsdFieldOptions(builder_, level_ + 1)) && result_;
    result_ = pinned_ && Field_6(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, FIELD, result_, pinned_, fieldRecovery_parser_);
    return result_ || pinned_;
  }

  // FieldID?
  private static boolean Field_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_0")) return false;
    FieldID(builder_, level_ + 1);
    return true;
  }

  // FieldReq?
  private static boolean Field_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_1")) return false;
    FieldReq(builder_, level_ + 1);
    return true;
  }

  // ('=' ConstValue)?
  private static boolean Field_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_4")) return false;
    Field_4_0(builder_, level_ + 1);
    return true;
  }

  // '=' ConstValue
  private static boolean Field_4_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_4_0")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EQUALS);
    result_ = result_ && ConstValue(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ListSeparator?
  private static boolean Field_6(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_6")) return false;
    ListSeparator(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // IntConstant ':'
  public static boolean FieldID(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "FieldID")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<field id>");
    result_ = IntConstant(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COLON);
    exit_section_(builder_, level_, marker_, FIELD_ID, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // 'required' | 'optional'
  public static boolean FieldReq(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "FieldReq")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<field req>");
    result_ = consumeToken(builder_, "required");
    if (!result_) result_ = consumeToken(builder_, "optional");
    exit_section_(builder_, level_, marker_, FIELD_REQ, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // BaseType | ContainerType | CustomType
  public static boolean FieldType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "FieldType")) return false;
    boolean result_ = false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<field type>");
    result_ = BaseType(builder_, level_ + 1);
    if (!result_) result_ = ContainerType(builder_, level_ + 1);
    if (!result_) result_ = CustomType(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, FIELD_TYPE, result_, false, null);
    return result_;
  }
